--- a/views/layout/menu.jade
+++ b/views/layout/menu.jade
@@ -37,7 +37,7 @@ nav.navbar-default.navbar-static-side(role='navigation')
           li
             a(href='/executableJobQueue') 等待执行的任务
           li
-            a(href='/loadJob') 手动加载任务
+            a(href='/LoadJob') 手动加载任务
       li
         a(href='#')
           i.fa.fa-file-text-o
