--- a/views/layout/menu.jade
+++ b/views/layout/menu.jade
@@ -17,11 +17,11 @@ nav.navbar-default.navbar-static-side(role='navigation')
           span.fa.arrow
         ul.nav.nav-second-level.collapse
           li
-            a(href='/nodeManager') 节点管理
+            a(href='/demo/nodeManager') 节点管理
           li
-            a(href='/nodeGroupManager') 节点组管理
+            a(href='/demo/nodeGroupManager') 节点组管理
           li
-            a(href='/nodeJvmInfo') 节点JVM信息
+            a(href='/demo/nodeJvmInfo') 节点JVM信息
       li
         a(href='#')
           i.fa.fa-random
@@ -29,15 +29,15 @@ nav.navbar-default.navbar-static-side(role='navigation')
           span.fa.arrow
         ul.nav.nav-second-level.collapse
           li
-            a(href='/jobAdd') 任务添加
+            a(href='/demo/jobAdd') 任务添加
           li
-            a(href='/cronJobQueue') Cron任务
+            a(href='/demo/cronJobQueue') Cron任务
           li
-            a(href='/executingJobQueue') 执行中的任务
+            a(href='/demo/executingJobQueue') 执行中的任务
           li
-            a(href='/executableJobQueue') 等待执行的任务
+            a(href='/demo/executableJobQueue') 等待执行的任务
           li
-            a(href='/LoadJob') 手动加载任务
+            a(href='/demo/LoadJob') 手动加载任务
       li
         a(href='#')
           i.fa.fa-file-text-o
@@ -45,9 +45,9 @@ nav.navbar-default.navbar-static-side(role='navigation')
           span.fa.arrow
         ul.nav.nav-second-level.collapse
           li
-            a(href='/jobLogger') 任务日志
+            a(href='/demo/jobLogger') 任务日志
           li
-            a(href='/nodeOnOfflineLog') 节点上下线日志
+            a(href='/demo/nodeOnOfflineLog') 节点上下线日志
       li
         a(href='#')
           i.fa.fa-bar-chart
@@ -55,8 +55,8 @@ nav.navbar-default.navbar-static-side(role='navigation')
           span.fa.arrow
         ul.nav.nav-second-level.collapse
           li
-            a(href='/jobtrackerMonitor') JobTracker监控
+            a(href='/demo/jobtrackerMonitor') JobTracker监控
           li
-            a(href='/tasktrackerMonitor') TaskTracker监控
+            a(href='/demo/tasktrackerMonitor') TaskTracker监控
           li
             a(href='h2', target='_blank') H2-Console
