add uploads folder to gitignre

--- a/views/layout/menu.jade
+++ b/views/layout/menu.jade
@@ -17,7 +17,7 @@ nav.navbar-default.navbar-static-side(role='navigation')
           span.fa.arrow
         ul.nav.nav-second-level.collapse
           li
-            a(href='/demo/nodeManager') 节点管理
+            a(href='/demo/simditor') Simditor
           li
             a(href='/demo/nodeGroupManager') 节点组管理
           li
