add file upload with uploadify module

--- a/views/layout/menu.jade
+++ b/views/layout/menu.jade
@@ -4,7 +4,7 @@ nav.navbar-default.navbar-static-side(role='navigation')
       li.nav-header
         .dropdown.profile-element
           #current-env.env-element(env='daily') Moajs管理后台
-        .logo-element 活动商城
+        .logo-element Moajs
       li
         a(href='/')
           i.fa.fa-th
@@ -13,13 +13,13 @@ nav.navbar-default.navbar-static-side(role='navigation')
       li
         a(href='#')
           i.fa.fa-server
-          span.nav-label 节点管理
+          span.nav-label 功能展示
           span.fa.arrow
         ul.nav.nav-second-level.collapse
           li
             a(href='/demo/simditor') Simditor
           li
-            a(href='/demo/nodeGroupManager') 节点组管理
+            a(href='/demo/uploadify') Uploadify
           li
             a(href='/demo/nodeJvmInfo') 节点JVM信息
       li
