--- a/views/layout/head.jade
+++ b/views/layout/head.jade
@@ -15,6 +15,9 @@ link(href="/assets/css/plugins/switchery/switchery.css" rel="stylesheet")
 link(href="/assets/css/plugins/footable/footable.core.css" rel="stylesheet")
 link(href="/assets/css/plugins/iCheck/custom.css" rel="stylesheet")
 
+<!-- bootstrap-table -->
+link(href="/assets/js/plugins/bootstrap-table/bootstrap-table.css" rel="stylesheet")
+
 link(href="/assets/css/style.min.css" rel="stylesheet")
 link(href="/assets/css/custom.css" rel="stylesheet")
 link(href="/assets/css/plugins/select/bootstrap-select.min.css" rel="stylesheet")
@@ -22,3 +25,6 @@ link(href="/assets/css/plugins/select/bootstrap-select.min.css" rel="stylesheet"
 script(src="/assets/js/jquery-2.1.1.js")
 script(src="/assets/js/bootstrap.min.js")
 script(src="/assets/js/date-util.js")
+
+script(src="/assets/js/plugins/bootstrap-table/bootstrap-table-locale-all.min.js")
+script(src="/assets/js/plugins/bootstrap-table/bootstrap-table.min.js")
