--- a/views/layout/head.jade
+++ b/views/layout/head.jade
@@ -11,11 +11,11 @@ link(href="/assets/font-awesome/css/font-awesome.css" rel="stylesheet")
 link(href="/assets/css/animate.css" rel="stylesheet")
 link(href="/assets/css/plugins/sweetalert/sweetalert.css" rel="stylesheet")
 link(href="/assets/css/plugins/switchery/switchery.css" rel="stylesheet")
-<!-- FooTable -->
+// FooTable
 link(href="/assets/css/plugins/footable/footable.core.css" rel="stylesheet")
 link(href="/assets/css/plugins/iCheck/custom.css" rel="stylesheet")
 
-<!-- bootstrap-table -->
+// bootstrap-table
 link(href="/assets/js/plugins/bootstrap-table/bootstrap-table.css" rel="stylesheet")
 
 link(href="/assets/css/style.min.css" rel="stylesheet")
@@ -28,3 +28,5 @@ script(src="/assets/js/date-util.js")
 
 script(src="/assets/js/plugins/bootstrap-table/bootstrap-table-locale-all.min.js")
 script(src="/assets/js/plugins/bootstrap-table/bootstrap-table.min.js")
+
+// script(src="/assets/js/plugins/bootstrap-table/extensions/*.js")
