--- a/views/layout/menu.jade
+++ b/views/layout/menu.jade
@@ -21,6 +21,8 @@ nav.navbar-default.navbar-static-side(role='navigation')
           li
             a(href='/demo/uploadify') Uploadify
           li
+            a(href='/demo/bootstrap_table') bootstrap-table
+          li
             a(href='/demo/nodeJvmInfo') 节点JVM信息
       li
         a(href='#')
